# rust-chess

chess_webapp/: gatsby-config.ts  package-lock.json  package.json
chess_webapp/src/components/: board.css  cell.css  cell.tsx  chessboard.tsx  game.tsx  piece.tsx  promotion.tsx
chess_webapp/src/components/pieces/: Bb.tsx  Bk.tsx  Bkn.tsx  Bp.tsx  Bq.tsx  Br.tsx  MoveMarker.tsx  Wb.tsx  Wk.tsx  Wkn.tsx  Wp.tsx  Wq.tsx  Wr.tsx
chess_webapp/src/pages/: chess_dev.tsx  chess_rust.tsx
rust_chess/: Cargo.toml
rust_chess/src/: ai.rs  chessbord.rs  game.rs  lib.rs  main.rs  piece.rs  server.rs  zobrist.rs
