[package]
name = "rust_chess"
authors = ["Nicolas Morlier"]
version = "0.1.0"
edition = "2021"

[dependencies]
cli-clipboard = "0.2.1"
serde = { version = "1.0.139", features=["derive"] }
serde_json = "1.0.82"
rand = "0.8.5"
rayon = "1.5.3"
# Web
actix = "0.13.0"
actix-web = "4.1.0"
actix-cors = "0.6.1"